<resources>
    <string name="app_name">loqui</string>
    <string name="greeting">Hello!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!--Page Title -->
    <string name="chats_page_title">Chats</string>
    <string name="calls_page_title">Calls</string>
    <string name="people_page_title">People</string>
    <string name="settings_page_title">Settings</string>

    <!-- Main Bottom navigation -->
    <string name="main_bottom_navigation_chats_label">Chats</string>
    <string name="main_bottom_navigation_calls_label">Calls</string>
    <string name="main_bottom_navigation_people_label">People</string>
    <string name="main_bottom_navigation_settings_label">Settings</string>

    <!-- Main Top navigation -->
    <string name="main_top_navigation_camera_label">Camera</string>
    <string name="main_top_navigation_edit_label">Edit</string>
    <string name="main_top_navigation_content_description_camera">Camera</string>
    <string name="main_top_navigation_content_description_edit">Camera</string>

    <!-- Settings -->

    <!-- Setting Section-->
    <string name="setting_section_profile_label">Profile</string>
    <string name="setting_section_services_label">Services</string>
    <string name="setting_section_preferences_label">Preferences</string>
    <string name="setting_section_account_label">Account</string>


    <!-- Setting Option-->
    <string name="setting_dark_mode_label">Dark mode</string>
    <string name="setting_message_requests_label">Message requests</string>
    <string name="setting_archived_chats_label">Archived chats</string>
    <string name="setting_custom_status_label">Custom status</string>
    <string name="setting_active_status_label">Active Status</string>
    <string name="setting_username_label">Username</string>
    <string name="setting_leagal_policies">Legal &amp; policies</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_register_button">Chưa có tài khoản? <b>Đăng ký ngay</b></string>
    <string name="signup_register_button">Bạn có tài khoản rồi? <b>Đăng nhập ngay</b></string>
    <string name="signup_forgot_button">Bạn đã cập nhật lại mật khẩu? <b>Đăng nhập ngay</b></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SUNNY SKY</string>
    <string name="nav_header_subtitle">Language Learning Application</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="type_a_messgae">Type a message</string>
    <string name="select_user">Type a message</string>
</resources>