<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/edit"
        android:icon="@drawable/ic_baseline_photo_camera_24"
        android:title="@string/main_top_navigation_camera_label"
        android:contentDescription="@string/main_top_navigation_content_description_camera"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/favorite"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/main_top_navigation_edit_label"
        android:contentDescription="@string/main_top_navigation_content_description_edit"
        app:showAsAction="ifRoom" />

<!--    <item-->
<!--        android:id="@+id/more"-->
<!--        android:title="@string/more"-->
<!--        android:contentDescription="@string/content_description_more"-->
<!--        app:showAsAction="never" />-->

</menu>